# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rango-sdk"
version = "0.0.1"
edition = "2021"
description = "Unofficial Rango SDK for Rust"


[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7.1"
ureq = {version = "2.0", features = ["json"]}

[dev-dependencies]
tokio = {version = "1.31.0", features = ["rt", "macros", "rt-multi-thread"]}
